assets/css/post.css
/**
  VARIABLES
**/
/* Breakpoints */
/* Colours */
/* Padding */
/* Font sizes */
/**
  TAGS
**/
* {
  box-sizing: border-box; }

html, body {
  margin: 0;
  padding: 0;
  border: 0;
  width: 100%;
  height: 100%;
  font-family: 'Raleway', Arial, Helvetica, sans-serif;
  background-color: #EFEFEF; }

a {
  text-decoration: initial;
  color: inherit; }

h1 {
  font-size: 2.5em;
  color: #011627;
  margin: 0;
  padding: 0;
  border: 0;
  font-family: 'Permanent Marker', Impact, Charcoal, sans-serif;
  font-weight: 300; }

h2 {
  font-size: 2em;
  margin: 0;
  padding: 0;
  border: 0; }

h3 {
  font-size: 1.5em;
  margin: 0;
  padding: 0;
  border: 0; }

/**
  Style for Alert Boxes 
**/

.boxed {
  font-size: 0.8em;
  font-style: italic;
  color: white;
  text-align: justify;
  border: 1px #505C7A;
  background-color: #505C7A;
  padding-top: 10px;
  padding-right: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
}

.language-boxed {
  font-size: 0.8em;
  font-style: italic;
  color: white;
  text-align: justify;
  border: 1px #505C7A;
  background-color: #505C7A !important;
  padding-top: 10px;
  padding-right: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
}

.language-alert {
        padding:20px 30px;
        margin-bottom:20px;
        text-shadow:0 1px 0 rgba(255,255,255,0.3);
        background-color:#72aaf9 !important;
        position:relative;
	overflow-wrap: break-word !important;
	word-wrap: break-word !important;
	white-space: pre-wrap !important;
        color:#ffffff !important;
        -webkit-border-radius:1px;
        -moz-border-radius:1px;border-radius:1px;
}

.language-alert_green {
	background-color:#a9c965 !important;
	overflow-wrap: break-word !important;
	word-wrap: break-word !important;
	white-space: pre-wrap !important;
	color:#ffffff !important;
}


.language-alert_red {
	background-color:#e25440 !important;
	overflow-wrap: break-word !important;
	word-wrap: break-word !important;
	white-space: pre-wrap !important;
	color:#ffffff !important;
}

/**
  Style for Notes
**/


.language-note_red {
	background-color:#ffdddd !important;
	border-left: 6px solid #f44336;
	overflow-wrap: break-word !important;
	word-wrap: break-word !important;
	white-space: pre-wrap !important;
	color:#f44336 !important;
}

.language-note_green {
	background-color:#ddffdd !important;
	border-left: 6px solid #4CAF50;
	overflow-wrap: break-word !important;
	word-wrap: break-word !important;
	white-space: pre-wrap !important;
	color:#4CAF50 !important;
}

.language-note {
	background-color:#c8e2f9 !important;
	border-left: 6px solid #2196F3;
	overflow-wrap: break-word !important;
	word-wrap: break-word !important;
	white-space: pre-wrap !important;
	color:#2196F3 !important;
}


/**
  MIXINS
**/
.navigation-container {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
  padding-bottom: 0.2em; }
  .navigation-container li {
    width: 50%;
    padding: 0.2em;
    text-align: center;
    color: #254E70;
    list-style-type: none;
    margin: 0.2em; }
    @media screen and (min-width: 1001px) {
      .navigation-container li:hover {
        color: #FFBF00;
        -webkit-transition: 0.2s;
        transition: 0.2s; } }

.blog-title-background {
  background-color: #F2C20F;
  width: 100%; }
  .blog-title-background h1 {
    padding: 0.2em;
    font-size: 1.5em;
    background-color: inherit;
    text-align: center; }

.post-title-background h2 {
  font-size: 2.5em;
  color: #254E70;
  background-color: inherit;
  text-align: center;
  width: 100%; }
  @media screen and (max-width: 550px) {
    .post-title-background h2 {
      padding: 0.7em 0.2em; } }
  @media screen and (min-width: 551px) and (max-width: 1000px) {
    .post-title-background h2 {
      padding: 0.7em 2em; } }
  @media screen and (min-width: 1001px) {
    .post-title-background h2 {
      padding: 0.7em 0; } }

.post-image {
  width: 100%;
  background-size: cover;
  margin-right: 0.7em;
  margin-bottom: 0.7em;
  background-position: center; }
  @media screen and (max-width: 550px) {
    .post-image {
      height: 220px; } }
  @media screen and (min-width: 551px) and (max-width: 1000px) {
    .post-image {
      height: 300px; } }
  @media screen and (min-width: 551px) {
    .post-image {
      margin-top: 0.7em; } }
  @media screen and (min-width: 1001px) {
    .post-image {
      height: 450px; } }

.tag-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap; }
  .tag-container .tag {
    text-transform: uppercase;
    padding: 0.2em;
    margin-right: 0.4em;
    margin-bottom: 0.4em;
    text-align: center;
    color: #FF4B3E;
    border: 1px solid #FF4B3E; }
    @media screen and (min-width: 1001px) {
      .tag-container .tag:hover {
        color: #254E70;
        border-color: #254E70;
        -webkit-transition: 0.2s;
        transition: 0.2s; } }

.footer-container {
  background-color: #254E70;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -ms-flex-item-align: end;
      align-self: flex-end; }
  .footer-container .social-button {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    border: 2px solid #FFBF00;
    background-color: inherit;
    font-size: 2em;
    color: #FFBF00;
    padding: 0.1em;
    margin: 0.2em; }
    @media screen and (min-width: 1001px) {
      .footer-container .social-button:hover {
        color: #EFEFEF;
        border-color: #EFEFEF;
        -webkit-transition: 0.2s;
        transition: 0.2s; } }
    .footer-container .social-button.hidden {
      display: none; }
/* ... */

